--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
-	<title>Svelte app</title>
+	<meta name="description" content="Daniel Duplat's Website">
+	<meta name="google-site-verification" content="RLnFfBecpUwafz1kSLdd3NmGV2PVsIBljyremeXCMAI" />
+	<title>Daniel Duplat Website</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link 
+	href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" 
+	rel="stylesheet"
+	>
 
 	<script defer src='/build/bundle.js'></script>
 </head>
