--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<meta name="description" content="Daniel Duplat's Website">
-	<meta name="google-site-verification" content="RLnFfBecpUwafz1kSLdd3NmGV2PVsIBljyremeXCMAI" />
-	<title>Daniel Duplat Website</title>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width,initial-scale=1'>
+  <meta name="description" content="Daniel Duplat's Website">
+  <meta name="google-site-verification" content="RLnFfBecpUwafz1kSLdd3NmGV2PVsIBljyremeXCMAI" />
+  <title>Daniel Duplat Website</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
-	<link 
-	href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" 
-	rel="stylesheet"
-	>
-
-	<script defer src='/build/bundle.js'></script>
+  <link rel='icon' type='image/png' href='/favicon.png'>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
+    integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
+  <script type="module" crossorigin src="/assets/index.2455d2c5.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.20b09a27.js">
+  <link rel="stylesheet" href="/assets/vendor.6bd85e6a.css">
+  <link rel="stylesheet" href="/assets/index.bd30a8e9.css">
 </head>
 
 <body>
+  <div id="app"></div>
+  
 </body>
+
 </html>
