deploy: ab4ca687cd4ec45f2b44b6b0c473ca797c9cc393

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css"
     integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
-  <script type="module" crossorigin src="https://danielduplat.com.br/assets/index.30b5476c.js"></script>
-  <link rel="modulepreload" href="https://danielduplat.com.br/assets/vendor.20b09a27.js">
-  <link rel="stylesheet" href="https://danielduplat.com.br/assets/vendor.6bd85e6a.css">
-  <link rel="stylesheet" href="https://danielduplat.com.br/assets/index.bd30a8e9.css">
+  <script type="module" crossorigin src="/assets/index.30b5476c.js"></script>
+  <link rel="modulepreload" href="/assets/vendor.20b09a27.js">
+  <link rel="stylesheet" href="/assets/vendor.6bd85e6a.css">
+  <link rel="stylesheet" href="/assets/index.736fb061.css">
 </head>
 
 <body>
